--- a/portfolio_website_git_hub_pages_starter_index.html
+++ b/portfolio_website_git_hub_pages_starter_index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Name | Data & Business Analytics Portfolio</title>
-  <meta name="description" content="Portfolio of Your Name — Data Science, Analytics, and Business Analysis projects, experience, and contact information." />
-  <meta property="og:title" content="Your Name | Data & Business Analytics Portfolio" />
-  <meta property="og:description" content="Projects, experience, and contact for data science & business analytics roles." />
+  <title> Gurkeerat Singh Kakar | Data & Business Analytics Portfolio </title>
+  <meta name="description" content=" My Portfolio " />
+  <meta property="og:title" content="Gurkeerat Kakar | Data & Business Analytics Portfolio" />
+  <meta property="og:description" content="Projects & Experience" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://your-username.github.io/" />
   <meta name="theme-color" content="#0ea5e9" />
