--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title> Gurkeerat Singh Kakar | Data & Business Analytics Portfolio </title>
-  <meta name="description" content=" My Portfolio " />
-  <meta property="og:title" content="Gurkeerat Kakar | Data & Business Analytics Portfolio" />
-  <meta property="og:description" content="Projects & Experience" />
+  <title>Gurkeerat Singh Kakar | My Portfolio</title>
+  <meta name="description" content="Portfolio of Your Name — Data Science, Analytics, and Business Analysis projects, experience, and contact information." />
+  <meta property="og:title" content="Your Name | Data & Business Analytics Portfolio" />
+  <meta property="og:description" content="Projects, experience, and contact for data science & business analytics roles." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://your-username.github.io/" />
   <meta name="theme-color" content="#0ea5e9" />
@@ -106,7 +106,8 @@
       </div>
       <div style="display:flex;justify-content:center">
         <!-- Replace the avatar with your headshot image if you have one -->
-        <div class="avatar" aria-hidden="true">Y</div>
+        <!-- Replace this src with your real headshot path (see guidance in chat). -->
+        <img src="assets/images/headshot.jpg" alt="Your Name headshot" class="avatar" />
       </div>
     </div>
   </section>
@@ -129,10 +130,21 @@
             <div class="list">
               <!-- TODO: Update your degree info -->
               <div class="li">
-                <strong>B.Sc. in Computing Science (Data Analytics)</strong>
+                <strong>B.Sc. Specialization in Computing Science</strong>
                 <span class="muted">University of Alberta • 2022–2026 (expected)</span>
-                <div class="muted">Coursework: Databases, Information Retrieval, Machine Learning, Statistics, Data Visualization.</div>
+                <div class="muted">Coursework: Databases, Machine Learning, Statistics, Data Visualization, Information Retrieval.</div>
               </div>
+              <div class="li">
+                <strong>Certificates (Pursuing)</strong>
+                <div class="muted">Applied Data Science • CILS Interdisciplinary Leadership</div>
+              </div>
+              <div class="li">
+                <strong>Certifications</strong>
+                <div class="muted">HackerRank Python (Skill Certification) • Data Visualization with Power BI • Data Visualization using Tableau • DUCAT Core Python • TOEFL 104/120</div>
+              </div>
+            </div>
+          </div>
+        </div>
               <div class="li">
                 <strong>Certificates</strong>
                 <div class="muted">Power BI (Intermediate), SQL for Data Analysis, R for Data Science.</div>
@@ -146,19 +158,28 @@
           <div class="pad">
             <h3 style="margin:0 0 6px">Selected Projects</h3>
             <div class="list">
-              <!-- Example project 1 -->
+              <!-- Energy Trilemma Dashboard -->
               <div class="li">
                 <strong>Energy Trilemma Dashboard (Alberta)</strong>
                 <div class="muted">Power BI, Python</div>
-                <div>Interactive dashboard on energy affordability, security, and sustainability; integrated public data and custom metrics.</div>
+                <div>Developed an interactive dashboard analyzing energy affordability, security, and sustainability across Alberta using public datasets and custom indicators.</div>
                 <div style="margin-top:6px">
                   <span class="tag">Power BI</span>
                   <span class="tag">Python</span>
                   <span class="tag">ETL</span>
-                  <a href="#" aria-label="View project link">View</a>
                 </div>
               </div>
-              <!-- Example project 2 -->
+              <!-- JTI Business Analytics Dashboard -->
+              <div class="li">
+                <strong>JTI Business Analytics Dashboard</strong>
+                <div class="muted">Tableau, Excel, Python</div>
+                <div>Cleaned and integrated multi-table datasets using Pandas and NumPy to build a Tableau dashboard showing revenue trends, repair frequency, and workforce performance.</div>
+                <div style="margin-top:6px">
+                  <span class="tag">Tableau</span>
+                  <span class="tag">Python</span>
+                  <span class="tag">Excel</span>
+                </div>
+              </div>
               <div class="li">
                 <strong>Android Event Lottery System</strong>
                 <div class="muted">Java/Kotlin, Firebase</div>
@@ -186,9 +207,45 @@
       </div>
 
     </div>
+    </section>
+
+  <!-- ======= Achievements ======= -->
+  <section id="achievements" class="section">
+    <div class="container">
+      <div class="head">
+        <div>
+          <div class="kicker">Recognition</div>
+          <h2>Awards & Achievements</h2>
+        </div>
+      </div>
+      <div class="grid cols-2">
+        <div class="card"><div class="pad">
+          <h3 style="margin-top:0">Students' Union Award for Global Connection</h3>
+          <div class="muted">University of Alberta Students' Union (UASU) • 2025</div>
+          <p>Recognized for strengthening campus connection and inclusivity through student leadership, community initiatives, and service with UAISA and university councils.</p>
+          <div>
+            <span class="tag">Community</span>
+            <span class="tag">Leadership</span>
+            <span class="tag">Impact</span>
+          </div>
+        </div></div>
+        <div class="card"><div class="pad">
+          <h3 style="margin-top:0">Certifications</h3>
+          <ul>
+            <li>HackerRank Python — Skill Certification</li>
+            <li>Data Visualization with Power BI</li>
+            <li>Data Visualization using Tableau</li>
+            <li>DUCAT Core Python (Foundations)</li>
+            <li>TOEFL — 104 / 120</li>
+          </ul>
+        </div></div>
+      </div>
+    </div>
   </section>
 
+  <!-- ======= Experience -->
   <!-- ======= Experience (University & Work) ======= -->
+  <section id="experience" class="section"> (University & Work) ======= -->
   <section id="experience" class="section">
     <div class="container">
       <div class="head">
@@ -202,13 +259,13 @@
         <!-- Experience card 1 -->
         <article class="card">
           <div class="pad">
-            <h3 style="margin-top:0">Research Assistant — BUEC 503</h3>
+            <h3 style="margin-top:0">Research Assistant — Department of Economics (BUEC 503)</h3>
             <div class="muted">University of Alberta • 2024–2025</div>
-            <p>Built datasets and dashboards for policy analysis; supported course operations and peer guidance.</p>
+            <p>Cleaned and analyzed large-scale household survey data using RStudio to study rural-urban divides and socioeconomic disparities. Built spatial dashboards and visualizations (maps, trend plots) to inform policy discussions and academic projects.</p>
             <div>
-              <span class="tag">Python</span>
+              <span class="tag">R</span>
               <span class="tag">Power BI</span>
-              <span class="tag">Excel</span>
+              <span class="tag">Data Visualization</span>
             </div>
           </div>
         </article>
@@ -216,21 +273,21 @@
         <article class="card">
           <div class="pad">
             <h3 style="margin-top:0">Data/Business Analyst Intern</h3>
-            <div class="muted">Skill‑Up Technologies • 2024</div>
-            <p>Created SQL queries and KPI dashboards; collaborated with stakeholders on requirements and QA.</p>
-            <div>
-              <span class="tag">SQL</span>
-              <span class="tag">Tableau</span>
-              <span class="tag">Stakeholder Mgmt</span>
-            </div>
+          <div class="muted">Skill‑Up Technologies • 2024</div>
+          <p>Automated reporting workflows using MySQL and Power BI, reducing manual work by 30%. Defined KPIs with management, improved data quality, and designed dashboards that drove a ~20% increase in user engagement and course completions.</p>
+          <div>
+            <span class="tag">SQL</span>
+            <span class="tag">Power BI</span>
+            <span class="tag">Stakeholder Mgmt</span>
           </div>
+        </div>
         </article>
         <!-- Experience card 3 -->
         <article class="card">
           <div class="pad">
-            <h3 style="margin-top:0">VP Internal — UAISA</h3>
-            <div class="muted">Students' Association • 2024–2025</div>
-            <p>Revived I‑Card program; improved governance and internal systems for transparency and sustainability.</p>
+            <h3 style="margin-top:0">Vice President Internal — UAISA</h3>
+            <div class="muted">University of Alberta International Students' Association • 2024–2025</div>
+            <p>Revived the I‑Card program to support student affordability, restructured internal departments to enhance governance, and coordinated mental wellness workshops for international students.</p>
             <div>
               <span class="tag">Leadership</span>
               <span class="tag">Operations</span>
@@ -283,7 +340,7 @@
           <h3 style="margin-top:0">Message</h3>
           <p class="muted">The fastest way to reach me is via email or LinkedIn.</p>
           <div class="contact">
-            <!-- TODO: Replace mailto and LinkedIn URL -->
+            <!-- Replace mailto and LinkedIn URL -->
             <a href="mailto:your.email@domain.com" rel="noopener">
               <span aria-hidden>📧</span>
               <span>Email: your.email@domain.com</span>
@@ -292,7 +349,8 @@
               <span aria-hidden>💼</span>
               <span>LinkedIn: linkedin.com/in/your-handle</span>
             </a>
-            <a href="./resume.pdf" target="_blank" rel="noopener">
+            <!-- Place your resume at /assets/resume.pdf in your repo -->
+            <a href="/assets/resume.pdf" target="_blank" rel="noopener">
               <span aria-hidden>📄</span>
               <span>Download Résumé (PDF)</span>
             </a>
